模型层调用，支持openai协议，添加测试类